# custom-qml-and-cpp-api-for-qml-test

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  main.qml
core/: CMakeLists.txt
core/inc/: core.hpp
core_fake/: CMakeLists.txt
custom_style_components/: CMakeLists.txt  custom_components_res.qrc
custom_style_components/src/: csc_registrator.cpp
integrity/: CMakeLists.txt
integrity/qml/: IntegrityView.qml
test/: CMakeLists.txt  tst_qmltest.cpp
test/qml/: tst_tests.qml
